Fixed CSS on iPhone5 portrait and landscape layouts

--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,76 @@ nav{
   cursor: pointer;
 }
 
-@media screen and (max-width: 375px){
+@media screen and (max-width: 320px){
+  nav{
+  background-color: gray;
+  height: 75px;
+  position: relative;
+}
+
+.container {
+  padding: 0 1rem;
+}
+
+#home-button{
+  right: 7rem;
+}
+
+#favorites-button{
+  right: 1rem;
+}
+
+.header-text {
+  font-size: 34px;
+}
+
+.subheader-text{
+  font-size: 18px;
+}
+
+#greeting{
+  text-align: center;
+}
+
+#home-button, #favorites-button {
+  font-size: 16px;
+}
+
+.col-fourth {
+  margin: 0.25rem;
+}
+
+.center{
+  margin: 10rem auto;
+}
+
+.desc-img {
+  margin-top: 1rem;
+}
+
+#user-name{
+  height: 30px;
+}
+
+#user-name:focus{
+  background-color: black;
+  color: white;
+  border: black solid;
+  border-radius: 5px;
+}
+
+#submit-name{
+  margin: 0px auto;
+  padding: 5px 15px;
+}
+
+#return-home, #add-to-favorites-button, #remove-from-favorites-button {
+  padding: 10px 30px;
+  margin-bottom: 10px;
+}
+}
+
+@media screen and (min-width: 375px){
   nav{
   background-color: gray;
   height: 75px;
@@ -191,11 +260,11 @@ nav{
 }
 
 .header-text {
-  font-size: 60px;
+  font-size: 40px;
 }
 
 .subheader-text{
-  font-size: 40px;
+  font-size: 32px;
 }
 
 #home-button, #favorites-button {
@@ -206,9 +275,9 @@ nav{
   margin: 0.25rem;
 }
 
-  .center{
-    margin: 5rem 5rem;
-  }
+.center{
+  margin: 4rem auto auto 0rem;
+}
 
 .desc-img {
   padding: 3rem 10rem;
